...
    /// - Returns: Модель алерты
    func convertResultToAlert(model: QuizResultsViewModel) -> AlertModel {
        let alertModel = AlertModel(
            title: model.title,
            message: model.text,
            buttons: model.buttons,
            identifier: "Game results",
            completion: {
                self.restartQuiz()
            }
        )
        return alertModel
    }
...
